Updates existing data structures and logic to integrate auction
This is work in progress, as some of the logic notably concerning the end of an auction is not included
