# x/escrow/types/tx.pb.go
@@ -34,11 +34,12 @@ const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 
 // MsgCreateEscrow defines a message to create an escrow
 type MsgCreateEscrow struct {
-	Seller   string                                   `protobuf:"bytes,1,opt,name=seller,proto3" json:"seller,omitempty"`
-	FeePayer string                                   `protobuf:"bytes,2,opt,name=fee_payer,json=feePayer,proto3" json:"fee_payer,omitempty"`
-	Object   *types.Any                               `protobuf:"bytes,3,opt,name=object,proto3" json:"object,omitempty"`
-	Price    github_com_cosmos_cosmos_sdk_types.Coins `protobuf:"bytes,4,rep,name=price,proto3,castrepeated=github.com/cosmos/cosmos-sdk/types.Coins" json:"price"`
-	Deadline uint64                                   `protobuf:"varint,5,opt,name=deadline,proto3" json:"deadline,omitempty"`
+	Seller    string                                   `protobuf:"bytes,1,opt,name=seller,proto3" json:"seller,omitempty"`
+	FeePayer  string                                   `protobuf:"bytes,2,opt,name=fee_payer,json=feePayer,proto3" json:"fee_payer,omitempty"`
+	Object    *types.Any                               `protobuf:"bytes,3,opt,name=object,proto3" json:"object,omitempty"`
+	Price     github_com_cosmos_cosmos_sdk_types.Coins `protobuf:"bytes,4,rep,name=price,proto3,castrepeated=github.com/cosmos/cosmos-sdk/types.Coins" json:"price"`
+	Deadline  uint64                                   `protobuf:"varint,5,opt,name=deadline,proto3" json:"deadline,omitempty"`
+	IsAuction bool                                     `protobuf:"varint,6,opt,name=is_auction,json=isAuction,proto3" json:"is_auction,omitempty"`
 }
 
 func (m *MsgCreateEscrow) Reset()         { *m = MsgCreateEscrow{} }
@@ -357,45 +358,46 @@ func init() {
 func init() { proto.RegisterFile("iov/escrow/v1beta1/tx.proto", fileDescriptor_5a2bd9bc1f359d0a) }
 
 var fileDescriptor_5a2bd9bc1f359d0a = []byte{
-	// 595 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xbc, 0x95, 0xcd, 0x6e, 0xd3, 0x4e,
-	0x14, 0xc5, 0xe3, 0x7c, 0xfd, 0xdb, 0x69, 0xf5, 0x07, 0x99, 0xaa, 0x38, 0x8e, 0x70, 0xa3, 0xac,
-	0x82, 0xaa, 0x8c, 0x69, 0xba, 0x60, 0x4d, 0x0a, 0x0b, 0x16, 0x11, 0xc8, 0x2a, 0x2c, 0xd8, 0x54,
-	0x63, 0xfb, 0xc6, 0x18, 0x92, 0x19, 0xcb, 0xe3, 0x84, 0x44, 0xe2, 0x0d, 0xd8, 0xf0, 0x1c, 0xac,
-	0xd9, 0xb3, 0x8d, 0x58, 0x75, 0x09, 0x1b, 0x3e, 0x92, 0x07, 0xe0, 0x15, 0x50, 0xc6, 0x63, 0xd7,
-	0x31, 0x29, 0x51, 0x25, 0x60, 0x15, 0xdf, 0xcc, 0x3d, 0x77, 0xe6, 0xfc, 0xe6, 0xc4, 0x41, 0x75,
-	0x9f, 0x8d, 0x4d, 0xe0, 0x4e, 0xc8, 0x5e, 0x99, 0xe3, 0x23, 0x1b, 0x22, 0x72, 0x64, 0x46, 0x13,
-	0x1c, 0x84, 0x2c, 0x62, 0xaa, 0xce, 0x23, 0x12, 0x52, 0x32, 0x04, 0x17, 0x4f, 0x70, 0xdc, 0x84,
-	0x65, 0x93, 0x6e, 0x38, 0x8c, 0x0f, 0x19, 0x37, 0x6d, 0xc2, 0x21, 0x55, 0x3a, 0xcc, 0xa7, 0xb1,
-	0x56, 0xdf, 0xf3, 0x98, 0xc7, 0xc4, 0xa3, 0xb9, 0x7c, 0x92, 0xdf, 0xd6, 0x3c, 0xc6, 0xbc, 0x01,
-	0x98, 0xa2, 0xb2, 0x47, 0x7d, 0x93, 0xd0, 0x69, 0xb2, 0x14, 0x0f, 0x3c, 0x8b, 0x35, 0x71, 0x11,
-	0x2f, 0x35, 0xdf, 0x14, 0xd1, 0xb5, 0x1e, 0xf7, 0x4e, 0x42, 0x20, 0x11, 0x3c, 0x10, 0xe7, 0x50,
-	0xf7, 0x51, 0x95, 0xc3, 0x60, 0x00, 0xa1, 0xa6, 0x34, 0x94, 0xd6, 0xb6, 0x25, 0x2b, 0xb5, 0x8e,
-	0xb6, 0xfb, 0x00, 0x67, 0x01, 0x99, 0x42, 0xa8, 0x15, 0xc5, 0xd2, 0x56, 0x1f, 0xe0, 0xf1, 0xb2,
-	0x56, 0xef, 0xa3, 0x2a, 0xb3, 0x5f, 0x80, 0x13, 0x69, 0xa5, 0x86, 0xd2, 0xda, 0xe9, 0xec, 0xe1,
-	0xf8, 0x3c, 0x38, 0x39, 0x0f, 0xbe, 0x47, 0xa7, 0xdd, 0xfd, 0x8f, 0xef, 0xdb, 0xea, 0x69, 0x48,
-	0x28, 0xef, 0x43, 0x48, 0xec, 0x01, 0x3c, 0x12, 0x1a, 0x4b, 0x6a, 0x55, 0x82, 0x2a, 0x41, 0xe8,
-	0x3b, 0xa0, 0x95, 0x1b, 0xa5, 0xd6, 0x4e, 0xa7, 0x86, 0xe5, 0x61, 0x97, 0x28, 0x12, 0x3e, 0xf8,
-	0x84, 0xf9, 0xb4, 0x7b, 0x67, 0xf6, 0xe5, 0xa0, 0xf0, 0xee, 0xeb, 0x41, 0xcb, 0xf3, 0xa3, 0xe7,
-	0x23, 0x1b, 0x3b, 0x6c, 0x28, 0x9d, 0xc9, 0x8f, 0x36, 0x77, 0x5f, 0x9a, 0xd1, 0x34, 0x00, 0x2e,
-	0x04, 0xdc, 0x8a, 0x27, 0xab, 0x3a, 0xda, 0x72, 0x81, 0xb8, 0x03, 0x9f, 0x82, 0x56, 0x69, 0x28,
-	0xad, 0xb2, 0x95, 0xd6, 0xcd, 0xdb, 0xe8, 0x66, 0x0e, 0x86, 0x05, 0x3c, 0x60, 0x94, 0x83, 0xfa,
-	0x3f, 0x2a, 0xfa, 0xae, 0x04, 0x52, 0xf4, 0xdd, 0xe6, 0x0f, 0x45, 0x80, 0x7b, 0x12, 0xb8, 0x17,
-	0xe0, 0x72, 0x3d, 0xaa, 0x86, 0xfe, 0x1b, 0x89, 0xf5, 0x04, 0x57, 0x52, 0xae, 0xa2, 0x2c, 0xe5,
-	0x50, 0x5e, 0xf0, 0x2f, 0xaf, 0xf0, 0x4f, 0xe1, 0x54, 0xfe, 0x09, 0x9c, 0x6a, 0x0e, 0x4e, 0x4d,
-	0xc0, 0xc9, 0x1a, 0x4e, 0xe0, 0x34, 0x3f, 0x28, 0xe8, 0x46, 0x8f, 0x7b, 0xc9, 0xc5, 0x9e, 0xb2,
-	0x4b, 0x80, 0x08, 0x67, 0xd4, 0x4d, 0x79, 0xc8, 0xea, 0xf7, 0x38, 0x1c, 0x54, 0x25, 0x43, 0x36,
-	0xa2, 0xd1, 0xdf, 0x08, 0x85, 0x1c, 0xdd, 0xbc, 0x85, 0xea, 0x6b, 0x0c, 0xa4, 0x06, 0x9f, 0x8a,
-	0xcb, 0xb6, 0xa0, 0x3f, 0xa2, 0xee, 0x1f, 0xf4, 0x26, 0x99, 0x66, 0xe7, 0x26, 0x5b, 0x76, 0x3e,
-	0x97, 0x50, 0xa9, 0xc7, 0x3d, 0x35, 0x40, 0xbb, 0x2b, 0xbf, 0xce, 0x43, 0x7c, 0xf9, 0xab, 0x03,
-	0xe7, 0xd2, 0xab, 0x1f, 0x5f, 0xa1, 0x39, 0x8d, 0x7a, 0x80, 0x76, 0x57, 0x62, 0xbd, 0x69, 0xc7,
-	0x6c, 0xf3, 0xc6, 0x1d, 0xd7, 0xe5, 0x47, 0x7d, 0x8d, 0xae, 0xff, 0x92, 0x1d, 0x73, 0xc3, 0xa0,
-	0xbc, 0x40, 0xbf, 0x7b, 0x45, 0x41, 0xd6, 0xef, 0xca, 0xcd, 0x6e, 0xf2, 0x9b, 0x6d, 0xde, 0xe8,
-	0x77, 0xdd, 0xdd, 0x76, 0x1f, 0xce, 0xbe, 0x1b, 0x85, 0xd9, 0xdc, 0x50, 0xce, 0xe7, 0x86, 0xf2,
-	0x6d, 0x6e, 0x28, 0x6f, 0x17, 0x46, 0xe1, 0x7c, 0x61, 0x14, 0x3e, 0x2d, 0x8c, 0xc2, 0xb3, 0xc3,
-	0x4c, 0x7a, 0x7d, 0x36, 0x6e, 0x33, 0x0a, 0x66, 0xba, 0x89, 0x39, 0x49, 0xfe, 0x53, 0x44, 0x8c,
-	0xed, 0xaa, 0x78, 0xbf, 0x1e, 0xff, 0x0c, 0x00, 0x00, 0xff, 0xff, 0x8e, 0x7e, 0xdb, 0xae, 0x6e,
-	0x06, 0x00, 0x00,
+	// 617 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xbc, 0x95, 0x4f, 0x4f, 0xd4, 0x4e,
+	0x18, 0xc7, 0xb7, 0xbb, 0xd0, 0x1f, 0x0c, 0xe4, 0xa7, 0x19, 0x09, 0x96, 0x12, 0xca, 0xa6, 0xa7,
+	0x1a, 0xc2, 0x54, 0xe0, 0xe0, 0x19, 0xd0, 0x83, 0x07, 0xa2, 0x69, 0xd0, 0x83, 0x17, 0x32, 0x6d,
+	0x9f, 0xad, 0xa3, 0xbb, 0x33, 0x4d, 0xa7, 0x45, 0x36, 0xf1, 0x45, 0xf8, 0x3a, 0x38, 0x7b, 0xf7,
+	0x4a, 0x3c, 0x71, 0xd4, 0x8b, 0x7f, 0xe0, 0x05, 0xf8, 0x16, 0xcc, 0x4e, 0xff, 0xd0, 0xae, 0x8b,
+	0x1b, 0x12, 0xf5, 0xb4, 0x7d, 0x3a, 0xcf, 0xf3, 0xcc, 0x7c, 0x3f, 0xcf, 0x77, 0xa7, 0x68, 0x95,
+	0x89, 0x63, 0x17, 0x64, 0x90, 0x88, 0x37, 0xee, 0xf1, 0x96, 0x0f, 0x29, 0xdd, 0x72, 0xd3, 0x13,
+	0x12, 0x27, 0x22, 0x15, 0xd8, 0x94, 0x29, 0x4d, 0x38, 0x1d, 0x40, 0x48, 0x4e, 0x48, 0x9e, 0x44,
+	0x8a, 0x24, 0xd3, 0x0a, 0x84, 0x1c, 0x08, 0xe9, 0xfa, 0x54, 0x42, 0x55, 0x19, 0x08, 0xc6, 0xf3,
+	0x5a, 0x73, 0x29, 0x12, 0x91, 0x50, 0x8f, 0xee, 0xe8, 0xa9, 0x78, 0xbb, 0x12, 0x09, 0x11, 0xf5,
+	0xc1, 0x55, 0x91, 0x9f, 0xf5, 0x5c, 0xca, 0x87, 0xe5, 0x52, 0xde, 0xf0, 0x28, 0xaf, 0xc9, 0x83,
+	0x7c, 0xc9, 0x3e, 0x6d, 0xa3, 0x5b, 0x07, 0x32, 0xda, 0x4f, 0x80, 0xa6, 0xf0, 0x48, 0x9d, 0x03,
+	0x2f, 0x23, 0x5d, 0x42, 0xbf, 0x0f, 0x89, 0xa1, 0x75, 0x35, 0x67, 0xde, 0x2b, 0x22, 0xbc, 0x8a,
+	0xe6, 0x7b, 0x00, 0x47, 0x31, 0x1d, 0x42, 0x62, 0xb4, 0xd5, 0xd2, 0x5c, 0x0f, 0xe0, 0xe9, 0x28,
+	0xc6, 0x0f, 0x91, 0x2e, 0xfc, 0x57, 0x10, 0xa4, 0x46, 0xa7, 0xab, 0x39, 0x0b, 0xdb, 0x4b, 0x24,
+	0x3f, 0x0f, 0x29, 0xcf, 0x43, 0x76, 0xf9, 0x70, 0x6f, 0xf9, 0xe3, 0xfb, 0x4d, 0x7c, 0x98, 0x50,
+	0x2e, 0x7b, 0x90, 0x50, 0xbf, 0x0f, 0x4f, 0x54, 0x8d, 0x57, 0xd4, 0x62, 0x8a, 0x66, 0xe3, 0x84,
+	0x05, 0x60, 0xcc, 0x74, 0x3b, 0xce, 0xc2, 0xf6, 0x0a, 0x29, 0x0e, 0x3b, 0x42, 0x51, 0xf2, 0x21,
+	0xfb, 0x82, 0xf1, 0xbd, 0xfb, 0x67, 0x5f, 0xd6, 0x5b, 0xa7, 0x5f, 0xd7, 0x9d, 0x88, 0xa5, 0x2f,
+	0x33, 0x9f, 0x04, 0x62, 0x50, 0x28, 0x2b, 0x7e, 0x36, 0x65, 0xf8, 0xda, 0x4d, 0x87, 0x31, 0x48,
+	0x55, 0x20, 0xbd, 0xbc, 0x33, 0x36, 0xd1, 0x5c, 0x08, 0x34, 0xec, 0x33, 0x0e, 0xc6, 0x6c, 0x57,
+	0x73, 0x66, 0xbc, 0x2a, 0xc6, 0x6b, 0x08, 0x31, 0x79, 0x44, 0xb3, 0x20, 0x65, 0x82, 0x1b, 0x7a,
+	0x57, 0x73, 0xe6, 0xbc, 0x79, 0x26, 0x77, 0xf3, 0x17, 0xf6, 0x3d, 0x74, 0x77, 0x8c, 0x95, 0x07,
+	0x32, 0x16, 0x5c, 0x02, 0xfe, 0x1f, 0xb5, 0x59, 0x58, 0xf0, 0x6a, 0xb3, 0xd0, 0xfe, 0xa1, 0x29,
+	0xae, 0xcf, 0xe2, 0xf0, 0x8a, 0xeb, 0x58, 0x0e, 0x36, 0xd0, 0x7f, 0x99, 0x5a, 0x2f, 0x69, 0x96,
+	0x61, 0x93, 0x74, 0x67, 0x8c, 0xf4, 0xd5, 0x78, 0x66, 0x1a, 0xe3, 0xa9, 0xd8, 0xcd, 0xfe, 0x13,
+	0x76, 0x7a, 0x93, 0x9d, 0xbd, 0xa2, 0xe0, 0xd4, 0x05, 0x97, 0x70, 0xec, 0x0f, 0x1a, 0xba, 0x73,
+	0x20, 0xa3, 0x72, 0xee, 0x87, 0xe2, 0x1a, 0x20, 0x4a, 0x19, 0x0f, 0x2b, 0x1e, 0x45, 0xf4, 0x7b,
+	0x1c, 0x01, 0xd2, 0xe9, 0x40, 0x64, 0x3c, 0xfd, 0x1b, 0x9e, 0x29, 0x5a, 0xdb, 0x6b, 0x68, 0x75,
+	0x82, 0x80, 0x4a, 0xe0, 0x73, 0x35, 0x6c, 0x0f, 0x7a, 0x19, 0x0f, 0xff, 0xa0, 0xb6, 0x82, 0x69,
+	0xbd, 0x6f, 0xb9, 0xe5, 0xf6, 0xe7, 0x0e, 0xea, 0x1c, 0xc8, 0x08, 0xc7, 0x68, 0xb1, 0xf1, 0xe7,
+	0xdd, 0x20, 0xd7, 0xdf, 0x2c, 0x64, 0xcc, 0xbd, 0xe6, 0xce, 0x0d, 0x92, 0x2b, 0xab, 0xc7, 0x68,
+	0xb1, 0x61, 0xeb, 0x69, 0x3b, 0xd6, 0x93, 0xa7, 0xee, 0x38, 0xc9, 0x3f, 0xf8, 0x2d, 0xba, 0xfd,
+	0x8b, 0x77, 0xdc, 0x29, 0x8d, 0xc6, 0x0b, 0xcc, 0x07, 0x37, 0x2c, 0xa8, 0xeb, 0x6d, 0x4c, 0x76,
+	0x9a, 0xde, 0x7a, 0xf2, 0x54, 0xbd, 0x93, 0x66, 0xbb, 0xf7, 0xf8, 0xec, 0xbb, 0xd5, 0x3a, 0xbb,
+	0xb0, 0xb4, 0xf3, 0x0b, 0x4b, 0xfb, 0x76, 0x61, 0x69, 0xef, 0x2e, 0xad, 0xd6, 0xf9, 0xa5, 0xd5,
+	0xfa, 0x74, 0x69, 0xb5, 0x5e, 0x6c, 0xd4, 0xdc, 0xcb, 0xc4, 0xf1, 0xa6, 0xe0, 0xe0, 0x56, 0x9b,
+	0xb8, 0x27, 0xe5, 0x27, 0x47, 0xd9, 0xd8, 0xd7, 0xd5, 0xf5, 0xbb, 0xf3, 0x33, 0x00, 0x00, 0xff,
+	0xff, 0xde, 0x9b, 0xac, 0x3d, 0x8d, 0x06, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -614,6 +616,16 @@ func (m *MsgCreateEscrow) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.IsAuction {
+		i--
+		if m.IsAuction {
+			dAtA[i] = 1
+		} else {
+			dAtA[i] = 0
+		}
+		i--
+		dAtA[i] = 0x30
+	}
 	if m.Deadline != 0 {
 		i = encodeVarintTx(dAtA, i, uint64(m.Deadline))
 		i--
@@ -971,6 +983,9 @@ func (m *MsgCreateEscrow) Size() (n int) {
 	if m.Deadline != 0 {
 		n += 1 + sovTx(uint64(m.Deadline))
 	}
+	if m.IsAuction {
+		n += 2
+	}
 	return n
 }
 
@@ -1284,6 +1299,26 @@ func (m *MsgCreateEscrow) Unmarshal(dAtA []byte) error {
 					break
 				}
 			}
+		case 6:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field IsAuction", wireType)
+			}
+			var v int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowTx
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				v |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			m.IsAuction = bool(v != 0)
 		default:
 			iNdEx = preIndex
 			skippy, err := skipTx(dAtA[iNdEx:])
