# x/escrow/types/types.pb.go
@@ -74,8 +74,10 @@ type Escrow struct {
 	Price            github_com_cosmos_cosmos_sdk_types.Coins `protobuf:"bytes,4,rep,name=price,proto3,castrepeated=github.com/cosmos/cosmos-sdk/types.Coins" json:"price"`
 	State            EscrowState                              `protobuf:"varint,5,opt,name=state,proto3,enum=starnamed.x.escrow.v1beta1.EscrowState" json:"state,omitempty"`
 	Deadline         uint64                                   `protobuf:"varint,6,opt,name=deadline,proto3" json:"deadline,omitempty"`
-	BrokerAddress    string                                   `protobuf:"bytes,7,opt,name=broker_address,json=brokerAddress,proto3" json:"broker_address,omitempty"`
-	BrokerCommission github_com_cosmos_cosmos_sdk_types.Dec   `protobuf:"bytes,8,opt,name=broker_commission,json=brokerCommission,proto3,customtype=github.com/cosmos/cosmos-sdk/types.Dec" json:"broker_commission"`
+	IsAuction        bool                                     `protobuf:"varint,7,opt,name=is_auction,json=isAuction,proto3" json:"is_auction,omitempty"`
+	LastBidder       string                                   `protobuf:"bytes,8,opt,name=last_bidder,json=lastBidder,proto3" json:"last_bidder,omitempty"`
+	BrokerAddress    string                                   `protobuf:"bytes,9,opt,name=broker_address,json=brokerAddress,proto3" json:"broker_address,omitempty"`
+	BrokerCommission github_com_cosmos_cosmos_sdk_types.Dec   `protobuf:"bytes,10,opt,name=broker_commission,json=brokerCommission,proto3,customtype=github.com/cosmos/cosmos-sdk/types.Dec" json:"broker_commission"`
 }
 
 func (m *Escrow) Reset()         { *m = Escrow{} }
@@ -119,44 +121,46 @@ func init() {
 func init() { proto.RegisterFile("iov/escrow/v1beta1/types.proto", fileDescriptor_06970306f8aa7966) }
 
 var fileDescriptor_06970306f8aa7966 = []byte{
-	// 583 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x93, 0x3f, 0x6f, 0xd3, 0x4e,
-	0x18, 0xc7, 0xe3, 0x24, 0x4d, 0xd3, 0xcb, 0xaf, 0x55, 0x7a, 0xea, 0xaf, 0x72, 0x3d, 0x38, 0x16,
-	0x52, 0xa9, 0x01, 0xf5, 0x4c, 0xcb, 0xcc, 0xd0, 0xc4, 0x46, 0xaa, 0x04, 0x4d, 0xe5, 0x06, 0x81,
-	0x60, 0x88, 0x6c, 0xdf, 0xd3, 0x70, 0xd4, 0xf6, 0x59, 0x3e, 0xb7, 0xb4, 0xef, 0x00, 0x65, 0xe2,
-	0x0d, 0x64, 0x62, 0x63, 0x61, 0x61, 0xe0, 0x25, 0x54, 0x4c, 0x1d, 0x11, 0x43, 0x81, 0xf6, 0x8d,
-	0x20, 0xfb, 0x9c, 0xa8, 0x1d, 0x90, 0x98, 0x7c, 0xcf, 0x73, 0x9f, 0xef, 0xf3, 0xe7, 0x6b, 0x1b,
-	0xe9, 0x8c, 0x9f, 0x58, 0x20, 0x82, 0x94, 0xbf, 0xb3, 0x4e, 0xb6, 0x7c, 0xc8, 0xbc, 0x2d, 0x2b,
-	0x3b, 0x4b, 0x40, 0x90, 0x24, 0xe5, 0x19, 0xc7, 0x9a, 0xc8, 0xbc, 0x34, 0xf6, 0x22, 0xa0, 0xe4,
-	0x94, 0x48, 0x8e, 0x94, 0x9c, 0xa6, 0x07, 0x5c, 0x44, 0x5c, 0x58, 0xbe, 0x27, 0x60, 0x26, 0x0e,
-	0x38, 0x8b, 0xa5, 0x56, 0x5b, 0x19, 0xf1, 0x11, 0x2f, 0x8e, 0x56, 0x7e, 0x2a, 0xb3, 0x6b, 0x23,
-	0xce, 0x47, 0x21, 0x58, 0x45, 0xe4, 0x1f, 0x1f, 0x5a, 0x5e, 0x7c, 0x36, 0xbd, 0x92, 0x05, 0x87,
-	0x52, 0x23, 0x03, 0x79, 0x75, 0xe7, 0x6b, 0x0d, 0x35, 0x9c, 0xa2, 0x3d, 0x5e, 0x42, 0x55, 0x46,
-	0x55, 0xc5, 0x50, 0xcc, 0x05, 0xb7, 0xca, 0x28, 0x5e, 0x45, 0x0d, 0x01, 0x61, 0x08, 0xa9, 0x5a,
-	0x2d, 0x72, 0x65, 0x84, 0x6d, 0xd4, 0xe0, 0xfe, 0x5b, 0x08, 0x32, 0xb5, 0x66, 0x28, 0x66, 0x6b,
-	0x7b, 0x85, 0xc8, 0xce, 0x64, 0xda, 0x99, 0xec, 0xc4, 0x67, 0xdd, 0xd5, 0x6f, 0x5f, 0x36, 0xf1,
-	0x20, 0xf5, 0x62, 0x71, 0x08, 0xa9, 0xe7, 0x87, 0xd0, 0x2f, 0x34, 0x6e, 0xa9, 0xc5, 0x1e, 0x9a,
-	0x4b, 0x52, 0x16, 0x80, 0x5a, 0x37, 0x6a, 0x66, 0x6b, 0x7b, 0x8d, 0x94, 0x63, 0xe5, 0x4b, 0x4f,
-	0x9d, 0x20, 0x3d, 0xce, 0xe2, 0xee, 0xc3, 0xf3, 0xcb, 0x4e, 0xe5, 0xd3, 0xcf, 0x8e, 0x39, 0x62,
-	0xd9, 0x9b, 0x63, 0x9f, 0x04, 0x3c, 0x2a, 0x77, 0x28, 0x1f, 0x9b, 0x82, 0x1e, 0x95, 0xe6, 0xe6,
-	0x02, 0xe1, 0xca, 0xca, 0xf8, 0x31, 0x9a, 0x13, 0x99, 0x97, 0x81, 0x3a, 0x67, 0x28, 0xe6, 0xd2,
-	0xf6, 0x06, 0xf9, 0xbb, 0xe7, 0x44, 0x7a, 0x70, 0x90, 0xe3, 0xae, 0x54, 0x61, 0x0d, 0x35, 0x29,
-	0x78, 0x34, 0x64, 0x31, 0xa8, 0x0d, 0x43, 0x31, 0xeb, 0xee, 0x2c, 0xc6, 0xeb, 0x68, 0xc9, 0x4f,
-	0xf9, 0x11, 0xa4, 0x43, 0x8f, 0xd2, 0x14, 0x84, 0x50, 0xe7, 0x0b, 0x8f, 0x16, 0x65, 0x76, 0x47,
-	0x26, 0xf1, 0x6b, 0xb4, 0x5c, 0x62, 0x01, 0x8f, 0x22, 0x26, 0x04, 0xe3, 0xb1, 0xda, 0xcc, 0xc9,
-	0x2e, 0xc9, 0xb7, 0xfa, 0x71, 0xd9, 0xb9, 0xfb, 0x0f, 0x5b, 0xd9, 0x10, 0xb8, 0x6d, 0x59, 0xa8,
-	0x37, 0xab, 0x73, 0xff, 0xb3, 0x82, 0x5a, 0x37, 0xc6, 0xc6, 0x1d, 0xb4, 0xec, 0x1c, 0xf4, 0xdc,
-	0xfe, 0x8b, 0xe1, 0xc1, 0x60, 0x67, 0xe0, 0x0c, 0xfb, 0xfb, 0xce, 0x5e, 0xbb, 0xa2, 0x35, 0xc7,
-	0x13, 0xa3, 0xde, 0x4f, 0x20, 0xc6, 0xf7, 0xd0, 0xea, 0x2d, 0xa0, 0xd7, 0x7f, 0xb6, 0xff, 0xd4,
-	0x19, 0x38, 0x76, 0x5b, 0xd1, 0x16, 0xc7, 0x13, 0x63, 0xa1, 0xc7, 0xa3, 0x24, 0x84, 0x0c, 0x28,
-	0xde, 0x40, 0xff, 0xdf, 0x42, 0x5d, 0xe7, 0xc9, 0xf3, 0x3d, 0xdb, 0xb1, 0xdb, 0x55, 0xed, 0xbf,
-	0xf1, 0xc4, 0x68, 0xba, 0x70, 0x78, 0x1c, 0x53, 0xa0, 0x78, 0x1d, 0xad, 0xdc, 0x02, 0x9d, 0x97,
-	0xfb, 0xbb, 0xae, 0x63, 0xb7, 0x6b, 0x5a, 0x6b, 0x3c, 0x31, 0xe6, 0x9d, 0xd3, 0x84, 0xa5, 0x40,
-	0xb5, 0xfa, 0xfb, 0x8f, 0xba, 0xd2, 0xdd, 0x3d, 0xff, 0xad, 0x57, 0xce, 0xaf, 0x74, 0xe5, 0xe2,
-	0x4a, 0x57, 0x7e, 0x5d, 0xe9, 0xca, 0x87, 0x6b, 0xbd, 0x72, 0x71, 0xad, 0x57, 0xbe, 0x5f, 0xeb,
-	0x95, 0x57, 0x0f, 0x6e, 0x38, 0xc1, 0xf8, 0xc9, 0x26, 0x8f, 0xc1, 0x9a, 0xbd, 0x31, 0xeb, 0x74,
-	0xfa, 0x37, 0x15, 0x96, 0xf8, 0x8d, 0xe2, 0x63, 0x7b, 0xf4, 0x27, 0x00, 0x00, 0xff, 0xff, 0xbb,
-	0x85, 0x51, 0xbf, 0x68, 0x03, 0x00, 0x00,
+	// 621 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x93, 0x3f, 0x6f, 0xd3, 0x40,
+	0x18, 0xc6, 0xe3, 0x24, 0x4d, 0x93, 0x0b, 0xad, 0xd2, 0x53, 0xa9, 0x5c, 0x4b, 0x38, 0x16, 0x52,
+	0x69, 0x00, 0xf5, 0x4c, 0xcb, 0xcc, 0x90, 0x3f, 0x46, 0xaa, 0x04, 0x4d, 0xe5, 0x06, 0x81, 0x60,
+	0x88, 0xce, 0xbe, 0xb7, 0xe1, 0xa8, 0xe3, 0x8b, 0x7c, 0x4e, 0x69, 0xbf, 0x01, 0xca, 0xc4, 0x17,
+	0xc8, 0xc4, 0xc6, 0xc2, 0xc2, 0x87, 0xa8, 0x98, 0x3a, 0x22, 0x86, 0x02, 0xed, 0x97, 0x60, 0x44,
+	0xf6, 0x39, 0x51, 0x3b, 0x20, 0x31, 0xe5, 0xde, 0xe7, 0x9e, 0xe7, 0x7d, 0xf3, 0xfe, 0x6c, 0x23,
+	0x93, 0x8b, 0x63, 0x1b, 0xa4, 0x1f, 0x89, 0xf7, 0xf6, 0xf1, 0xb6, 0x07, 0x31, 0xdd, 0xb6, 0xe3,
+	0xd3, 0x11, 0x48, 0x32, 0x8a, 0x44, 0x2c, 0xb0, 0x21, 0x63, 0x1a, 0x85, 0x74, 0x08, 0x8c, 0x9c,
+	0x10, 0xe5, 0x23, 0x99, 0xcf, 0x30, 0x7d, 0x21, 0x87, 0x42, 0xda, 0x1e, 0x95, 0x30, 0x0f, 0xfb,
+	0x82, 0x87, 0x2a, 0x6b, 0xac, 0x0e, 0xc4, 0x40, 0xa4, 0x47, 0x3b, 0x39, 0x65, 0xea, 0xfa, 0x40,
+	0x88, 0x41, 0x00, 0x76, 0x5a, 0x79, 0xe3, 0x43, 0x9b, 0x86, 0xa7, 0xb3, 0x2b, 0xd5, 0xb0, 0xaf,
+	0x32, 0xaa, 0x50, 0x57, 0x77, 0xff, 0x14, 0x50, 0xc9, 0x49, 0xc7, 0xe3, 0x65, 0x94, 0xe7, 0x4c,
+	0xd7, 0x2c, 0xad, 0x51, 0x71, 0xf3, 0x9c, 0xe1, 0x35, 0x54, 0x92, 0x10, 0x04, 0x10, 0xe9, 0xf9,
+	0x54, 0xcb, 0x2a, 0xdc, 0x41, 0x25, 0xe1, 0xbd, 0x03, 0x3f, 0xd6, 0x0b, 0x96, 0xd6, 0xa8, 0xee,
+	0xac, 0x12, 0x35, 0x99, 0xcc, 0x26, 0x93, 0x66, 0x78, 0xda, 0x5a, 0xfb, 0xf6, 0x75, 0x0b, 0xf7,
+	0x22, 0x1a, 0xca, 0x43, 0x88, 0xa8, 0x17, 0x40, 0x37, 0xcd, 0xb8, 0x59, 0x16, 0x53, 0xb4, 0x30,
+	0x8a, 0xb8, 0x0f, 0x7a, 0xd1, 0x2a, 0x34, 0xaa, 0x3b, 0xeb, 0x24, 0xfb, 0x5b, 0xc9, 0xd2, 0x33,
+	0x12, 0xa4, 0x2d, 0x78, 0xd8, 0x7a, 0x74, 0x76, 0x51, 0xcf, 0x7d, 0xfe, 0x59, 0x6f, 0x0c, 0x78,
+	0xfc, 0x76, 0xec, 0x11, 0x5f, 0x0c, 0xb3, 0x1d, 0xb2, 0x9f, 0x2d, 0xc9, 0x8e, 0x32, 0xb8, 0x49,
+	0x40, 0xba, 0xaa, 0x33, 0x7e, 0x82, 0x16, 0x64, 0x4c, 0x63, 0xd0, 0x17, 0x2c, 0xad, 0xb1, 0xbc,
+	0xb3, 0x49, 0xfe, 0xcd, 0x9c, 0x28, 0x06, 0x07, 0x89, 0xdd, 0x55, 0x29, 0x6c, 0xa0, 0x32, 0x03,
+	0xca, 0x02, 0x1e, 0x82, 0x5e, 0xb2, 0xb4, 0x46, 0xd1, 0x9d, 0xd7, 0xf8, 0x0e, 0x42, 0x5c, 0xf6,
+	0xe9, 0xd8, 0x8f, 0xb9, 0x08, 0xf5, 0x45, 0x4b, 0x6b, 0x94, 0xdd, 0x0a, 0x97, 0x4d, 0x25, 0xe0,
+	0x3a, 0xaa, 0x06, 0x54, 0xc6, 0x7d, 0x8f, 0x33, 0x06, 0x91, 0x5e, 0x4e, 0xf9, 0xa1, 0x44, 0x6a,
+	0xa5, 0x0a, 0xde, 0x40, 0xcb, 0x5e, 0x24, 0x8e, 0x20, 0xea, 0x53, 0xc6, 0x22, 0x90, 0x52, 0xaf,
+	0xa4, 0x9e, 0x25, 0xa5, 0x36, 0x95, 0x88, 0xdf, 0xa0, 0x95, 0xcc, 0xe6, 0x8b, 0xe1, 0x90, 0x4b,
+	0x99, 0x4c, 0x43, 0x89, 0xb3, 0x45, 0x12, 0x2a, 0x3f, 0x2e, 0xea, 0xf7, 0xfe, 0x83, 0x4a, 0x07,
+	0x7c, 0xb7, 0xa6, 0x1a, 0xb5, 0xe7, 0x7d, 0x1e, 0x7c, 0xd1, 0x50, 0xf5, 0xda, 0xda, 0xb8, 0x8e,
+	0x56, 0x9c, 0x83, 0xb6, 0xdb, 0x7d, 0xd9, 0x3f, 0xe8, 0x35, 0x7b, 0x4e, 0xbf, 0xbb, 0xef, 0xec,
+	0xd5, 0x72, 0x46, 0x79, 0x32, 0xb5, 0x8a, 0xdd, 0x11, 0x84, 0xf8, 0x3e, 0x5a, 0xbb, 0x61, 0x68,
+	0x77, 0x9f, 0xef, 0x3f, 0x73, 0x7a, 0x4e, 0xa7, 0xa6, 0x19, 0x4b, 0x93, 0xa9, 0x55, 0x69, 0x8b,
+	0xe1, 0x28, 0x80, 0x18, 0x18, 0xde, 0x44, 0xb7, 0x6f, 0x58, 0x5d, 0xe7, 0xe9, 0x8b, 0xbd, 0x8e,
+	0xd3, 0xa9, 0xe5, 0x8d, 0x5b, 0x93, 0xa9, 0x55, 0x76, 0xe1, 0x70, 0x1c, 0x32, 0x60, 0x78, 0x03,
+	0xad, 0xde, 0x30, 0x3a, 0xaf, 0xf6, 0x77, 0x5d, 0xa7, 0x53, 0x2b, 0x18, 0xd5, 0xc9, 0xd4, 0x5a,
+	0x74, 0x4e, 0x46, 0x3c, 0x02, 0x66, 0x14, 0x3f, 0x7c, 0x32, 0xb5, 0xd6, 0xee, 0xd9, 0x6f, 0x33,
+	0x77, 0x76, 0x69, 0x6a, 0xe7, 0x97, 0xa6, 0xf6, 0xeb, 0xd2, 0xd4, 0x3e, 0x5e, 0x99, 0xb9, 0xf3,
+	0x2b, 0x33, 0xf7, 0xfd, 0xca, 0xcc, 0xbd, 0x7e, 0x78, 0x8d, 0x04, 0x17, 0xc7, 0x5b, 0x22, 0x04,
+	0x7b, 0xfe, 0xc4, 0xed, 0x93, 0xd9, 0xd7, 0x98, 0x22, 0xf1, 0x4a, 0xe9, 0xcb, 0xfa, 0xf8, 0x6f,
+	0x00, 0x00, 0x00, 0xff, 0xff, 0x89, 0x2d, 0xc5, 0x5b, 0xa8, 0x03, 0x00, 0x00,
 }
 
 func (m *Escrow) Marshal() (dAtA []byte, err error) {
@@ -188,13 +192,30 @@ func (m *Escrow) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 		i = encodeVarintTypes(dAtA, i, uint64(size))
 	}
 	i--
-	dAtA[i] = 0x42
+	dAtA[i] = 0x52
 	if len(m.BrokerAddress) > 0 {
 		i -= len(m.BrokerAddress)
 		copy(dAtA[i:], m.BrokerAddress)
 		i = encodeVarintTypes(dAtA, i, uint64(len(m.BrokerAddress)))
 		i--
-		dAtA[i] = 0x3a
+		dAtA[i] = 0x4a
+	}
+	if len(m.LastBidder) > 0 {
+		i -= len(m.LastBidder)
+		copy(dAtA[i:], m.LastBidder)
+		i = encodeVarintTypes(dAtA, i, uint64(len(m.LastBidder)))
+		i--
+		dAtA[i] = 0x42
+	}
+	if m.IsAuction {
+		i--
+		if m.IsAuction {
+			dAtA[i] = 1
+		} else {
+			dAtA[i] = 0
+		}
+		i--
+		dAtA[i] = 0x38
 	}
 	if m.Deadline != 0 {
 		i = encodeVarintTypes(dAtA, i, uint64(m.Deadline))
@@ -289,6 +310,13 @@ func (m *Escrow) Size() (n int) {
 	}
 	if m.Deadline != 0 {
 		n += 1 + sovTypes(uint64(m.Deadline))
+	}
+	if m.IsAuction {
+		n += 2
+	}
+	l = len(m.LastBidder)
+	if l > 0 {
+		n += 1 + l + sovTypes(uint64(l))
 	}
 	l = len(m.BrokerAddress)
 	if l > 0 {
@@ -507,6 +535,58 @@ func (m *Escrow) Unmarshal(dAtA []byte) error {
 				}
 			}
 		case 7:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field IsAuction", wireType)
+			}
+			var v int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowTypes
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				v |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			m.IsAuction = bool(v != 0)
+		case 8:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field LastBidder", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowTypes
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthTypes
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthTypes
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.LastBidder = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 9:
 			if wireType != 2 {
 				return fmt.Errorf("proto: wrong wireType = %d for field BrokerAddress", wireType)
 			}
@@ -538,7 +618,7 @@ func (m *Escrow) Unmarshal(dAtA []byte) error {
 			}
 			m.BrokerAddress = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
-		case 8:
+		case 10:
 			if wireType != 2 {
 				return fmt.Errorf("proto: wrong wireType = %d for field BrokerCommission", wireType)
 			}
